# cdpx

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HARNESS.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  cdpx  dev  docker-bake.hcl  docker-compose.site-casts.yml  docker-compose.symfony-e2e.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AGENT-GUIDE.md  CLAUDE-browser-snippet.md  CONFIGURATION.md  CONTEXT.md  DEVELOPMENT.md  GITHUB.md  GLOSSARY.md  INSTALLATION.md  INTEGRATION.md  PRIMITIVES.md  RELEASE-ARCHITECTURE.md  RELEASE-PLAN.md  RELEASING.md  ROADMAP.md  SESSION-LIFECYCLE.md  TODO.md  TROUBLESHOOTING.md  VALIDATION.md  cockpit.toml  leverage-log.md  surfaces.yaml
docs/architecture/decisions/: 0001-oci-runtime-and-digest-promotion.md
docs/features/: browser-capture-observability.md  browser-navigation.md  dev-profiler-diff.md  dom-interaction.md  harness-proof-cockpit.md  orchestration-control.md  seo-performance-accessibility.md  state-session.md
docs/milestones/: M1-e2e-chrome.md  M2-boucle-symfony.md  M3-interception-emulation.md  M4-seo-perf.md  M5-orchestration.md  M6-distribution.md  M8-isolation-securite-equipe.md  M8-isolation-securite-session.md  M9-preuves-secondaires.md  attach-backlog.json
packaging/: Dockerfile.embedded  compose.sidecar.yml  embedded-install  install  native-cdpx  native-certutil  native-chromium  native-python
schemas/: cdpx.schema.json
scripts/: github_summary.py  language_ratchet.py  language_ratchet_baseline.json  verify_dist.py
scripts/site_casts/: __init__.py  generate.py  runtime.py
scripts/site_casts/scenarios/: __init__.py  s01_session.py  s02_nav.py  s03_read.py  s04_act.py  s05_observe.py  s06_capture.py  s07_state.py  s08_seo.py  s09_perf.py  s10_journey.py  s11_resilience.py  s12_profiler.py
site/: index.html
site/assets/casts/: README.md  act.cast  capture.cast  journey.cast  nav.cast  observe.cast  perf.cast  profiler.cast  read.cast  resilience.cast  seo.cast  session.cast  state.cast
skills/cdpx/: SKILL.md
skills/cdpx/agents/: openai.yaml
src/cdpx/: __init__.py  action_model.py  artifacts.py  cdp_types.py  cli.py  cli_context.py  client.py  discovery.py  journal.py  option_types.py  orchestration.py  output.py  policy.py  private_files.py  proof.py  runtime.py  runtime_config.py  scenarios.py  session.py
src/cdpx/commands/: __init__.py  artifacts.py  diagnostics.py  navigation.py  orchestration.py  sessions.py  shared.py  state.py
src/cdpx/primitives/: __init__.py  actions.py  advanced.py  audit.py  capture.py  dev.py  diagnostics.py  emulation.py  frames.py  inputs.py  interception.py  js.py  nav.py  net.py  profiler_panels.py  recording.py  state.py
src/cdpx/proofing/: __init__.py  artifact_policy.py  cast.py  demo.py  documentation.py  evidence_catalog.py  evidence_policy.py  execution.py  features.py  gitcontext.py  junit.py  markdown.py  private_io.py  scenario_inline.py  scenario_models.py  suites.py  summary.py
src/cdpx/security/: __init__.py  redaction.py
src/cdpx/sessions/: __init__.py  process.py  supervisor.py  trust.py
src/cdpx/testing/: __init__.py  e2e.py  evidence.py  fixture_server.py  intent.py  mock_cdp.py  mock_session.py
tests/: conftest.py  test_action_model.py  test_artifacts.py  test_bump.py  test_cast.py  test_cli.py  test_coverage_gate.py  test_discovery_and_client.py  test_docs.py  test_documentation.py  test_e2e_helpers.py  test_evidence.py  test_features.py  test_fixture_server.py  test_github_summary.py  test_intent.py  test_journal.py  test_language_ratchet.py  test_launcher.sh  test_markdown.py  test_multi_worktree.py  test_packaging.py  test_policy.py  test_primitives.py  test_private_files.py  test_profiler_panels.py  test_proof.py  test_public_surfaces.py  test_redaction.py  test_runtime_config.py  test_scenarios.py  test_security_integration.py  test_session.py  test_session_cli.py  test_team_cli.py  test_tooling_contract.py  test_trust.py
tests/e2e/: test_e2e_chrome.py  test_e2e_runtime_network.py  test_e2e_sessions.py  test_e2e_symfony.py  test_e2e_tls.py
tests/fixtures/: child.html  console.html  coverage.css  coverage.html  coverage.js  form.html  iframe.html  index.html  interactions-rich.html  intercept.html  long.html  network.html  seo-broken.html  seo-edge.html  seo.html  spa.html  storage.html  vitals.html
tests/fixtures/profiler/: README.md  cache.html  db.html  exception-raised.html  exception.html  http_client.html  logger.html  messenger.html  request.html  time.html  twig.html
tests/fixtures/scenarios/: static_form_pass.yml  symfony_front_fail.yml  (+3 more)
tests/symfony-app/: Dockerfile  README.md  composer.json
tools/: __init__.py  bump.py  coverage_gate.py  harness.py  release_pins.py
(+31 files in other folders)
