[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cdpx"
dynamic = ["version"]
description = "CLI de primitives Chrome DevTools Protocol pour agents de dev (Symfony / e-commerce / SEO)"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
keywords = ["chrome", "devtools", "cdp", "cli", "agent", "symfony", "seo", "e2e"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Private :: Do Not Upload",
]
dependencies = ["PyYAML>=6", "websockets>=12"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build", "twine", "mypy"]

[project.scripts]
cdpx = "cdpx.cli:main"

[tool.setuptools.dynamic]
version = { attr = "cdpx.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cdpx"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
