[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cdpx"
dynamic = ["version"]
description = "Scriptable Chrome DevTools Protocol CLI for agents and developers to inspect, act, measure, audit, and prove browser behavior"
readme = "README.md"
authors = [{ name = "inem0o" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["chrome", "devtools", "cdp", "cli", "agent", "symfony", "seo", "e2e"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = ["markdown-it-py>=4.2,<5", "PyYAML>=6", "websockets>=12"]

[project.urls]
Homepage = "https://github.com/inem0o/cdpx"
Repository = "https://github.com/inem0o/cdpx"
Issues = "https://github.com/inem0o/cdpx/issues"
Changelog = "https://github.com/inem0o/cdpx/blob/HEAD/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "build", "twine", "mypy", "packaging>=24.2"]

[project.scripts]
cdpx = "cdpx.cli:main"

[tool.setuptools.dynamic]
version = { attr = "cdpx.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cdpx"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
