[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cdpx"
version = "0.1.0"
description = "Supervised browser automation CLI for coding agents and developers — Chrome DevTools Protocol actions to inspect, act, measure, audit and prove browser behavior"
readme = "README.md"
authors = [{ name = "inem0o" }]
requires-python = ">=3.14,<3.15"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "chrome",
    "devtools",
    "cdp",
    "cli",
    "browser-automation",
    "agent",
    "agentic",
    "ai-agents",
    "coding-agent",
    "symfony",
    "seo",
    "e2e",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = ["markdown-it-py>=4.2,<5", "PyYAML>=6", "websockets>=12"]

[project.urls]
Homepage = "https://github.com/inem0o/cdpx"
Repository = "https://github.com/inem0o/cdpx"
Issues = "https://github.com/inem0o/cdpx/issues"
Changelog = "https://github.com/inem0o/cdpx/blob/HEAD/CHANGELOG.md"

[dependency-groups]
dev = [
    "build",
    "mypy",
    "packaging>=24.2",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
cdpx = "cdpx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cdpx"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
check_untyped_defs = true
